<resources>
    <string name="app_name">MobileDev_Project</string>
    <string name="coffin1_name">Artisan - Brown Metal Casket</string>
    <string name="coffin2_name">Farmer - Green Metal Casket</string>
    <string name="coffin3_name">Praying Hands Spruce - Blue Metal Casket</string>
    <string name="coffin4_name">PrimRose White with Pink Velvet Interior - Metal Casket</string>
    <string name="coffin5_name">Sterling Copper with Ivory Velvet Interior - Metal Casket</string>
    <string name="coffin6_name">White Cross Lords Prayer with White Velvet Interior - Metal Casket</string>
    <string name="urn1_name">Adult Blessing Pearl Urn</string>
    <string name="urn2_name">Butterfly Landing Token</string>
    <string name="urn3_name">Grecian White Adult Cremation Urn</string>
    <string name="urn4_name">Silver Fleur De Lis Urn Set</string>
    <string name="urn5_name">Angel in Mourning Keepsake Urn</string>
    <string name="urn6_name">Flying Doves Urn</string>
    <string name="urn7_name">Grecian Blue Keepsake Heart</string>
    <string name="urn8_name">Hummingbird Keepsake Cremation Pendant</string>
    <string name="urn9_name">Serenity Cremation Pendant</string>
    <string name="urn10_name">Tear Drop Keepsake Cremation Pendant</string>
    <string name="flower1_name">Blossoming Heart</string>
    <string name="flower2_name">Cherished Moments - Red</string>
    <string name="flower3_name">Cherished Moments - Blue</string>
    <string name="flower4_name">Divine Tribute Cross</string>
    <string name="flower5_name">Eternal Friendship</string>
    <string name="flower6_name">Love and Honor Wreath</string>
    <string name="flower7_name">Lush Greenery Basket</string>
    <string name="flower8_name">Peace Lily</string>
    <string name="flower9_name">Peach Blessings Garden</string>
    <string name="flower10_name">Splendid Life Spray</string>
    <string name="flower11_name">Sympathy Garden</string>
    <string name="flower12_name">Tranquil White Lillies Basket</string>
    <string name="welcome_text">Welcome to St.Siomeow Funeral Home - UTIC Chapel</string>
    <string name="credits">© 2024 St. Siomeow Funeral Services - CITU Chapel.\nAll Rights Reserved.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>