<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffinProduct">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/backButtonCoffin"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/previous" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:srcCompat="@drawable/siomeow_header" />

            <ImageView
                android:id="@+id/userProfileCoffin"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/userprofile" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="312dp"
                android:layout_marginTop="68dp"
                app:srcCompat="@drawable/coffin_preview" />

            <TextView

                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backb"
                android:layout_alignParentStart="true"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/aleo_bold"
                android:text="Coffin Products"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center"
                >
                <LinearLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/coffin1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coffin1_artisan"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="$1024.00"
                        android:textColor="#474646"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/coffin1_name"
                        android:textColor="#474646"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/coffin2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coffin2_farmer"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="$1144.00"
                        android:textColor="#474646"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/coffin2_name"
                        android:textStyle="bold"
                        android:textColor="#474646"
                        android:textSize="18sp" />

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >
                <LinearLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/coffin3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coffin3_prayinghands_spruce"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="$1124.00"
                        android:textColor="#474646"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/coffin3_name"
                        android:textStyle="bold"
                        android:textColor="#474646"
                        android:textSize="18sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/coffin4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coffin4_primrose"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="$1244.00"
                        android:textColor="#474646"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/coffin4_name"
                        android:textStyle="bold"
                        android:textColor="#474646"
                        android:textSize="18sp" />

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginBottom="20dp"
                >
                <LinearLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/coffin5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coffin5_sterling_copper_casket"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="$1118.00"
                        android:textColor="#474646"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/coffin5_name"
                        android:textStyle="bold"
                        android:textColor="#474646"
                        android:textSize="18sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/coffin6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coffin6_white_cross_lords_prayer"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="$1100.00"
                        android:textColor="#474646"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/coffin6_name"
                        android:textStyle="bold"
                        android:textColor="#474646"
                        android:textSize="18sp" />

                </LinearLayout>

            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#6c2c1f"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/your_paragraph_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="#FFFFFF" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="55dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="© 2024 St. Siomeow Funeral Services - CITU Chapel.\nAll Rights Reserved."
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>